--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,10 +132,17 @@ header {
     align-items: center;
 }
 
+@media screen and (min-width:768px) {
 
-@media screen and (max-width:968px) {
     .skills_link {
         display: grid;
+        grid-template-columns: repeat(5, 1fr) !important;
+    }
+}
+
+@media screen and (max-width:968px) {
+
+    .skills_link {
         grid-template-columns: repeat(5, 1fr);
     }
 
@@ -152,8 +159,6 @@ header {
         transition: .3s;
     }
 
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
 }
 
 .experience_line:nth-last-child(2) {
@@ -379,10 +384,18 @@ address .bx {
 .experience_data,
 .certification_data {
     gap: .5rem;
+    width: 100%;
 }
 
-.education_localisation,
-.experience_localisation,
+.education_title,
+.experience_localisation {
+    font-size: var(--h3-font-size);
+    color: var(--container-color-alt);
+    background-color: var(--text-color);
+    padding: .2em;
+    width: 90%;
+}
+
 .certification_localisation {
     font-size: var(--small-font-size);
     color: var(--title-color);
@@ -407,6 +420,8 @@ address .bx {
 .skills_link {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    width: 100%;
+    margin-left: 1em;
 }
 
 .experience-education {
